[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/menu_settings.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/settings_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/btn_return.png" type="Texture" id=3]
[ext_resource path="res://textures/black16x16.png" type="Texture" id=4]
[ext_resource path="res://textures/ui/slider_handle.png" type="Texture" id=5]
[ext_resource path="res://textures/ui/slider_v1.png" type="Texture" id=6]
[ext_resource path="res://audio/sounds/8_bit_sound_library/wav/collect_point_00.wav" type="Sample" id=7]
[ext_resource path="res://audio/sounds/8_bit_sound_library/wav/hit_03.wav" type="Sample" id=8]

[sub_resource type="Animation" id=1]

resource/name = "fade_to_black"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture_black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="SampleLibrary" id=3]

samples/Collect_Point_00 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/Hit_03 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}

[node name="menu_settings" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="."]

layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="texture_bg" type="TextureFrame" parent="canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="btn_return" type="TextureButton" parent="canvas"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = -277.0
margin/right = -39.0
margin/bottom = -315.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="texture_black" type="TextureFrame" parent="canvas"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="canvas"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_to_black = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="slider_sound_volume" type="HSlider" parent="canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 771.0
margin/top = 600.0
margin/right = 1141.0
margin/bottom = 616.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 2 )
range/min = 0.0
range/max = 1.0
range/step = 0.05
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="slider_music_volume" type="HSlider" parent="canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 789.0
margin/top = 749.0
margin/right = 1159.0
margin/bottom = 765.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 2 )
range/min = 0.0
range/max = 1.0
range/step = 0.05
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


